@@ -264,9 +264,12 @@ do
 	         [0],[ignore],[ignore])
 	for st in '' '-static' '-no-install'
 	do
-          case $st,$l3 in
-          ,-rpath*) mst= ;;
-          *) mst=-static ;;
+	  # if -static is not passed, and the library is shared, then we have
+	  # to use -DLIBA_DLL_IMPORT, thus main.lo (and not main-static.lo).
+	  case $st,$l3 in
+	  -static,*) mst=-static ;;
+	  *,-rpath*) mst= ;;
+	  *) mst=-static ;;
 	  esac
 
 	  LT_AT_CHECK([$LIBTOOL --mode=link $CC $CFLAGS $LDFLAGS $st -o "$rel"main$EXEEXT "$rel"main$mst.lo "$rel"sub2/liba.la],
